objects/SMAX_PS_ComplaintFaultCode__c.object
<CustomObject>
    <description>Complaint Fault Codes</description>
    <label>Complaint Fault Code</label>
    <nameField>
        <displayFormat>CFCN-{0000000000}</displayFormat>
        <label>Complaint Fault Code Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Fault Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SMAX_PS_Complaint__c</fullName>
        <description>Complaint Name</description>
        <inlineHelpText>Complaint Name</inlineHelpText>
        <label>Complaint</label>
        <referenceTo>SMAX_PS_Complaint__c</referenceTo>
        <relationshipLabel>Complaint Fault Codes</relationshipLabel>
        <relationshipName>Complaint_Fault_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_FaultCode__c</fullName>
        <description>Fault Code</description>
        <inlineHelpText>Fault Code</inlineHelpText>
        <label>Fault Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_LastTxnNum__c</fullName>
        <description>Last Transaction Number</description>
        <inlineHelpText>Last Transaction Number</inlineHelpText>
        <label>Last Transaction Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_FaultCodeGroup__c</fullName>
        <description>Fault Code Group</description>
        <inlineHelpText>Fault Code Group</inlineHelpText>
        <label>Fault Code Group</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_FaultDescription__c</fullName>
        <description>Fault Description</description>
        <inlineHelpText>Fault Description</inlineHelpText>
        <label>Fault Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>